@@ -1,6 +1,12 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add kindof method (gh#243, gh#254)
+  - Add countof method (gh#243, gh#254)
+  - Add unitof method (gh#245, gh#254)
+  - Add def method (gh#244, gh#248, gh#254)
+  - Add hook load_custom_types to the language plugins that allows
+    them to define custom types (gh#253)
 
 1.23_01   2020-05-01 11:13:59 -0600
   - Custom record arguments are kept around for the lifetime of the
